--- a/package.json
+++ b/package.json
@@ -26,16 +26,25 @@
   },
   "homepage": "https://github.com/hoanthan/emvc",
   "devDependencies": {
-    "typescript": "3.3.3333",
     "@types/dotenv": "~8.2.0",
     "@types/express": "~4.17.2",
-    "@types/glob": "~7.1.1"
+    "@types/glob": "~7.1.1",
+    "@types/uuid": "^8.0.0",
+    "typescript": "3.3.3333"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "~4.17.1",
     "glob": "~7.1.6",
-    "reflect-metadata": "~0.1.10"
+    "inversify": "^5.0.1",
+    "reflect-metadata": "~0.1.10",
+    "uuid": "^8.2.0"
   },
-  "keywords": ["Express", "MVC", "Node", "Typescript", "Decorators"]
+  "keywords": [
+    "Express",
+    "MVC",
+    "Node",
+    "Typescript",
+    "Decorators"
+  ]
 }
