using configurable globs

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tsex-decorators",
+  "name": "emvc-decorators",
   "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
